--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.8",
     "prettier": "^3.2.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
