--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "@reduxjs/toolkit": "^2.2.3",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "prettier": "^3.2.5",
     "react": "^18.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
