--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
